update: ui updated

--- a/index.html
+++ b/index.html
@@ -55,11 +55,14 @@
       <!-- Hero Section -->
       <section aria-label="hero">
         <div class="hero">
-          <h1 class="hero-heading">Lets build a better tomorrow, together.</h1>
-          <p class="hero-description">
-            Buy 1 Token. Join the DAO. Change the world
-          </p>
-          <button class="button-large">Request Early Access</button>
+          <div class="hero-content">
+            <h1 class="hero-heading">Lets build a better tomorrow, together.</h1>
+            <p class="hero-description">
+              Buy 1 Token. Join the DAO. Change the world
+            </p>
+            <button class="button-large">Request Early Access</button>
+          </div>
+           
         </div>
       </section>
     </div>
